packages/cli/assets/local-k8s/base/mailpit-service.yaml
apiVersion: v1
kind: Service
metadata:
  name: mailpit
  namespace: eve
  labels:
    app.kubernetes.io/name: mailpit
spec:
  selector:
    app.kubernetes.io/name: mailpit
  ports:
    - name: smtp
      port: 1025
      targetPort: 1025
    - name: web
      port: 8025
      targetPort: 8025
