packages/cli/assets/local-k8s/base/registry-service.yaml
apiVersion: v1
kind: Service
metadata:
  name: eve-registry
  namespace: eve-system
  labels:
    app: eve-registry
spec:
  type: ClusterIP
  selector:
    app: eve-registry
  ports:
    - name: registry
      port: 5000
      targetPort: 5000
