packages/cli/assets/local-k8s/base/sso-service.yaml
apiVersion: v1
kind: Service
metadata:
  name: eve-sso
  namespace: eve
  labels:
    app.kubernetes.io/name: eve-sso
spec:
  selector:
    app.kubernetes.io/name: eve-sso
  ports:
    - name: http
      port: 3100
      targetPort: http
