packages/cli/assets/local-k8s/base/mailpit-ingress.yaml
apiVersion: networking.k8s.io/v1
kind: Ingress
metadata:
  name: mailpit
  namespace: eve
  labels:
    app.kubernetes.io/name: mailpit
spec:
  rules:
    - host: mail.eve.lvh.me
      http:
        paths:
          - path: /
            pathType: Prefix
            backend:
              service:
                name: mailpit
                port:
                  number: 8025
